--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
                                                                                 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
                                                                                 <style>
                                                                             :root {        
-                                                                                --primary: #1e3a5f;
+                                                                                  --primary: #1e3a5f;
                                                                                 --primary-dark: #0d2c5a;
                                                                                 --primary-light: #e8f0fe;   
                                                                                 --accent: #e63946;
@@ -5274,7 +5274,7 @@
                                                                                                 <a href="#"><i class="fas fa-user-graduate"></i> Student Profile</a>
                                                                                             </li>
                                                                                             <li class="nav-item" data-section="subjects">
-                                                                                                <a href="#"><i class="fas fa-book"></i> Subjects / Courses</a>
+                                                                                                <a href="#"><i class="fas fa-book"></i> Academic Load</a>
                                                                                             </li>
                                                                                             <li class="nav-item" data-section="schedule">
                                                                                                 <a href="#"><i class="fas fa-calendar-alt"></i> Class Schedule</a>
@@ -5715,7 +5715,7 @@
                                                                                                                 <h5>First Semester</h5>
                                                                                                                 <div class="subjects-table">
                                                                                                                     <div class="subject-row header">
-                                                                                                                        <div class="subject-code">SUBJECT/<br>COUSRSE CODE</div>
+                                                                                                                        <div class="subject-code">Academic Load</div>
                                                                                                                         <div class="subject-title">Subject Title</div>
                                                                                                                         <div class="subject-title">Pre-requisite</div>
                                                                                                                         <div class="subject-units">Units</div>
@@ -6955,9 +6955,9 @@
                                                                                         <!-- Subjects Section -->
                                                                                         <div id="subjects" class="content-section">
                                                                                             <div class="breadcrumb">
-                                                                                                <a href="#" data-section="dashboard">Dashboard</a> <i class="fas fa-chevron-right"></i> <span>Current Subjects</span>
+                                                                                                <a href="#" data-section="dashboard">Dashboard</a> <i class="fas fa-chevron-right"></i> <span>Academic Load</span>
                                                                                             </div>
-                                                                                            <h1 class="page-title">Current Subjects / Courses</h1>
+                                                                                            <h1 class="page-title">Academic Load</h1>
                                                                                             <div class="card">
                                                                                                 <div class="card-header">
                                                                                                     <h2 class="card-title">Registered Subjects / Courses (2025-2026, 4th Year, First Term)</h2>
