--- a/index.html
+++ b/index.html
@@ -5420,7 +5420,7 @@
     <div class="stat-value" id="scholarship-summary">
         <div style="display:flex;flex-direction:column;gap:6px;">
             <div style="display:flex;align-items:center;style="color:var(--text-color)">
-                <span text-align:"center";font-size:16px;line-height:1.4;">Ynares Youth  (2022)  <hr></span>
+                <span text-align:"center";font-size:16px;line-height:1.4;">Ynares Youth <br> (2022)  <hr></span>
             </div>
         </div>
     </div>
