Update P.E. uniform description text

--- a/index.html
+++ b/index.html
@@ -7333,7 +7333,7 @@
                                                                                                                 <i class="fas fa-dumbbell"></i>
                                                                                                             </div>
                                                                                                             <h3 class="uniform-card-title">College P.E.</h3>
-                                                                                                            <p class="uniform-card-description">Physical Education Uniform</p>
+                                                                                                            <p class="uniform-card-description">Physical Education</p>
                                                                                                             <div class="uniform-card-badge">
                                                                                                                 <i class="fas fa-check-circle"></i> Completed
                                                                                                             </div>
@@ -7371,7 +7371,7 @@
                                                                                                                 <i class="fas fa-basketball-ball"></i>
                                                                                                             </div>
                                                                                                             <h3 class="uniform-card-title">SHS P.E.</h3>
-                                                                                                            <p class="uniform-card-description">Physical Education Uniform</p>
+                                                                                                            <p class="uniform-card-description">Physical Education</p>
                                                                                                             <div class="uniform-card-badge">
                                                                                                                 <i class="fas fa-check-circle"></i> Selected
                                                                                                             </div>
@@ -7404,7 +7404,7 @@
                                                                                                         </div>
                                                                                                         <div class="summary-item">
                                                                                                             <i class="fas fa-check-circle"></i>
-                                                                                                            <span>College P.E. Uniform</span>
+                                                                                                            <span>College P.E.</span>
                                                                                                         </div>
                                                                                                     </div>
                                                                                                 </div>
