--- a/index.html
+++ b/index.html
@@ -3775,12 +3775,7 @@
                                                                                 margin: 0;
                                                                             }
 
-                                                                            .dark-mode .summary-item {
-                                                                                background: white;
-                                                                                border-color: #e5e7eb;
-                                                                                box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-                                                                            }
-
+                                                                            .dark-mode 
                                                                             @media (max-width: 768px) {
                                                                                 .prospectus-header {
                                                                                     flex-direction: column;
@@ -4775,9 +4770,7 @@
                                                                                 color: #000000 !important;
                                                                             }
 
-                                                                            #x-ray-modal .modal-header {
-                                                                                border-bottom: 1px solid #e0e0e0 !important;
-                                                                            }
+                                                                            #
 
                                                                             .modal-header {
                                                                                 display: flex;
@@ -7997,7 +7990,8 @@
                                                                                             <div class="modal-content glass-modal">
                                                                                                 <div class="modal-header">
                                                                                                     <h2 class="modal-title">
-                                                                                                        <i class="fas fa-stethoscope"></i> Physical Examination Records
+                                                                                                        <i class="fas fa-stethoscope"></i> 
+                                                                                                        Physical Examination Records
                                                                                                     </h2>
                                                                                                 </div>
                                                                                                 <div class="modal-body">
