--- a/index.html
+++ b/index.html
@@ -5411,8 +5411,8 @@
                                                                                                                 <span style="color:var(--text-color);font-size:20px;line-height:1.4;">ICCT Colleges INC. Antipolo Campus  <hr> </span>
                                                                                                             </div>
                                                                                                             <div style="display:flex;align-items:center;">
-                                                                                                                <small style="color:var(--text-color);font-size:17px;line-height:1.3;">ICCT Bldg,. Gen. Luna Rd. cor. Ressurection St.,
-                                                                                                                    Bgy. San Roque, Antipolo City, Rizal
+                                                                                                                <small style="color:var(--text-color);font-size:17px;line-height:1.3;">ICCT Bldg,. Gen. Luna Rd. <br>cor. Ressurection St.,
+                                                                                                                    Bgy. San Roque, <br>Antipolo City, Rizal
                                                                                                                 </small>
                                                                                                             </div>
                                                                                                         </div>
@@ -5424,7 +5424,7 @@
     <div class="stat-value" id="scholarship-summary">
         <div style="display:flex;flex-direction:column;gap:6px;">
             <div style="display:flex;align-items:center;color:var(--text-color);">
-                <span style="text-align:center;font-size:20px;line-height:1.4;">Ynares Youth  (2022)  <hr></span>
+                <span style="text-align:center;font-size:23px;line-height:1.4;">Ynares Youth  (2022)  <hr></span>
             </div>
         </div>
     </div>
