--- a/index.html
+++ b/index.html
@@ -5411,8 +5411,8 @@
                                                                                                                 <span style="color:var(--text-color);font-size:20px;line-height:1.4;">ICCT Colleges INC. Antipolo Campus  <hr> </span>
                                                                                                             </div>
                                                                                                             <div style="display:flex;align-items:center;">
-                                                                                                                <small style="color:var(--text-color);font-size:17px;line-height:1.3;">ICCT Bldg,. Gen. Luna Rd. <br>cor. Ressurection St.,
-                                                                                                                    Bgy. San Roque, <br>Antipolo City, Rizal
+                                                                                                                <small style="color:var(--text-color);font-size:14px;line-height:1.3;">ICCT Bldg,. Gen. Luna Rd. <br>cor. Ressurection St.,
+                                                                                                                    <br>Bgy. San Roque, Antipolo City, Rizal
                                                                                                                 </small>
                                                                                                             </div>
                                                                                                         </div>
