--- a/index.html
+++ b/index.html
@@ -5385,21 +5385,21 @@
                                                                                             
                                                                                             <div class="stats-grid">
                                                                                                 <div class="stat-card">
-                                                                                                    <div class="stat-value">14<hr></div>
+                                                                                                    <div class="stat-value">14</div>
                                                                                                     <div class="stat-label">Current Units</div>
                                                                                                 </div>
                                                                                                 <div class="stat-card">
-                                                                                                    <div class="stat-value">3.25<hr></div>
+                                                                                                    <div class="stat-value">3.25</div>
                                                                                                     <div class="stat-label">Current GWA</div>
                                                                                                 </div>
                                                                                                 <div class="stat-card">
                                                                                                     <div class="stat-value" id="pending-requirements-count">12</div>
-                                                                               <hr>                     <div class="stat-label"> Pending Requirements</div>
+                                                                                                    <div class="stat-label"> Pending Requirements</div>
                                                                                                 </div>
                                                                                                 <div class="stat-card">
                                                                                                     <div class="stat-value">₱ 0.00
                                                                                                     
-                                                                                                    <hr></div>
+                                                                                                    </div>
                                                                                                     <div class="stat-label">Balance Due</div>
                                                                                                 </div>
 
@@ -6166,7 +6166,7 @@
                                                                                                                         <div class="subject-units">3</div>
                                                                                                                         <div class="subject-grade">1.25</div>
                                                                                                                         <div class="subject-remarks">PASSED</div>
-                                                                                                                    </div>
+</div>
                                                                                                                     <div class="subject-row">
                                                                                                                         <div class="subject-code">IT 407</div>
                                                                                                                         <div class="subject-title">Research Methods in IT</div>
