--- a/index.html
+++ b/index.html
@@ -5327,7 +5327,7 @@
                                                                                                 <a href="#"><i class="fas fa-question-circle"></i> Help & Support</a>
                                                                                             </li>
                                                                                             <li class="nav-item" data-section="feedback">
-                                                                                                <a href="#"><i class="fas fa-comments"></i> Feedback / Faculty Evaluation</a>
+                                                                                                <a href="#"><i class="fas fa-comments"></i> Feedback & Faculty Evaluation</a>
                                                                                             </li>
                                                                                             <li class="nav-item" data-section="settings">
                                                                                                 <a href="#"><i class="fas fa-cog"></i> Settings</a>
