--- a/index.html
+++ b/index.html
@@ -3777,7 +3777,7 @@
 
                                                                             .summary-label {
                                                                                 font-size: 14px;
-                                                                                color: #000000;
+                                                                                color:var(--text);
                                                                                 margin-bottom: 8px;
                                                                                 font-weight: 500;
                                                                             }
@@ -3785,7 +3785,7 @@
                                                                             .summary-value {
                                                                                 font-size: 24px;
                                                                                 font-weight: 700;
-                                                                                color: #000000;
+                                                                                color:var(--text);
                                                                             margin: 0;
                                                                         }
 
